fix(note): fix single object note
