# swagger.yaml
@@ -7,7 +7,7 @@
   },
   "servers": [
     {
-      "url": "https://kasirlaundrypro.netlify.app/api"
+      "url": "http://localhost:3000/api"
     }
   ],
   "paths": {
@@ -476,77 +476,29 @@
     },
     "/note": {
       "get": {
-        "summary": "Get all notes",
-        "description": "Retrieve a list of all notes",
+        "summary": "Get a single note",
+        "description": "Retrieve a single note",
         "tags": [
           "Note"
         ],
         "responses": {
           "200": {
-            "description": "Successful retrieval",
+            "description": "Successful retrieval of a single note",
             "content": {
               "application/json": {
                 "schema": {
-                  "type": "array",
-                  "items": {
-                    "$ref": "#/components/schemas/Note"
-                  }
+                  "$ref": "#/components/schemas/Note"
                 }
               }
             }
           }
         }
       },
-      "post": {
-        "summary": "Create a new note",
-        "description": "Create a new note record",
-        "tags": [
-          "Note"
-        ],
-        "requestBody": {
-          "required": true,
-          "content": {
-            "application/json": {
-              "schema": {
-                "$ref": "#/components/schemas/NoteRequestBody"
-              }
-            }
-          }
-        },
-        "responses": {
-          "201": {
-            "description": "Note created successfully",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "$ref": "#/components/schemas/NoteResponse"
-                }
-              }
-            }
-          },
-          "400": {
-            "description": "Bad request, invalid input"
-          }
-        }
-      }
-    },
-    "/note/{id}": {
       "put": {
-        "summary": "Update a note",
-        "description": "Update an existing note record",
+        "summary": "Create or update a note",
+        "description": "Create a new note if none exists, or update the latest note if one is found",
         "tags": [
           "Note"
-        ],
-        "parameters": [
-          {
-            "in": "path",
-            "name": "id",
-            "required": true,
-            "schema": {
-              "type": "string"
-            },
-            "description": "ID of the note to update"
-          }
         ],
         "requestBody": {
           "required": true,
@@ -560,7 +512,7 @@
         },
         "responses": {
           "200": {
-            "description": "Note updated successfully",
+            "description": "Note created or updated successfully",
             "content": {
               "application/json": {
                 "schema": {
